# minilake

./: .gitignore  .pre-commit-config.yaml  Dockerfile.ci  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: pylint.yml  python-app.yml
dummy-data/: create_test_data.py
src/ingestion/: file_ingestion.py
src/minilake/: __init__.py  arrow_to_iceberg.py  config.py  db_conn.py
src/minilake/api/endpoint/: retriever.py
src/minilake/core/: __init__.py  connection.py  exceptions.py
src/minilake/ingestion/: base.py  csv.py  file_ingestion.py  parquet.py
src/minilake/query/: execute.py
src/minilake/services/: delta_storage.py  file_ingestion.py  s3_manager.py
src/minilake/sql/: query_table.py
src/minilake/storage/: base.py  delta.py  factory.py  local.py  s3.py
src/minilake/ui/: README.md  __init__.py  app.py  run.py
tests/: conftest.py  test_delta_config.py  test_ingestion.py
tests/api/: test_endpoints.py
tests/storage/: test_delta.py
