[build-system]
requires = ["setuptools>=65.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "minilake"
version = "0.1.0"
description = ""
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "duckdb>=1.1.3",
    "openpyxl>=3.1.5",
    "pandas>=2.2.3",
    "polars>=1.20.0",
    "pyarrow>=19.0.0",
]

[project.optional-dependencies]
test = [
    "pytest>=8.2.0",
    "pytest-mock>=3.12.0"
]

[tool.setuptools]
packages = ["minilake", "minilake.ingestion"]
package-dir = {"" = "src"}
