[build-system]
requires = ["setuptools>=65.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "minilake"
version = "0.1.0"
description = ""
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "boto3>=1.36.16",
    "deltalake>=0.24.0",
    "duckdb>=1.1.3",
    "fastapi>=0.115.11",
    "openpyxl>=3.1.5",
    "pandas>=2.2.3",
    "polars>=1.20.0",
    "pyarrow>=19.0.0",
    "pyiceberg>=0.8.1",
    "python-dotenv>=1.0.1",
]

[project.optional-dependencies]
test = [
    "pytest>=8.2.0",
    "pytest-mock>=3.12.0",
    "pytest-cov>=4.1.0" 
]
dev = [
    "ruff>=0.3.0"
]
ui = [
    "plotly>=6.0.1",
    "streamlit>=1.43.2",
]

[project.scripts]
minilake-explorer = "streamlit.web.cli:main_run"

[tool.ruff]
# Same as Black.
line-length = 88
indent-width = 4
target-version = "py312"

[tool.ruff.lint]
# Enable pycodestyle (`E`), Pyflakes (`F`), and isort (`I`) codes
select = ["E", "F", "I", "N", "W", "B", "C4", "UP", "RUF"]
ignore = []

# Allow autofix for all enabled rules (when `--fix`) is provided.
fixable = ["ALL"]
unfixable = []

# Exclude from linting
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "venv",
]

[tool.ruff.lint.isort]
known-first-party = ["minilake"]

[tool.setuptools]
packages = ["minilake"]
package-dir = {"" = "src"}
